# pillar

./: .gitignore  CMakeLists.txt  README.md
cmake/: utils.cmake
include/pillar/: version.h
include/pillar/framework/: coretypes.h
include/pillar/framework/formats/: image_frame.h
include/pillar/framework/types/: anchor.h  data_type.h  dim.h  point2.h  rectangle.h  vector.h
include/pillar/status/: status_code.h
include/pillar/thread_pool/: threadsafe_queue.h
include/pillar/utility/: similarity.h  singleton.h  test.h  timeit.h  trange.h
include/pillar/utility/ext/: cond.h  math.h  std.h  string.h
src/framework/formats/: image_frame.cc
src/status/: status.cc
src/utility/: similarity.cc
tests/: CMakeLists.txt  image_frame.test.cc  timeit.test.cc  types.test.cc
